--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
     "projects": {
         "default": "helphive"
-    }
+    },
+    "targets": {
+        "helphive": {
+            "hosting": {
+                "helphivenow": [
+                    "helphivenow"
+                ]
+            }
+        }
+    },
+    "etags": {}
 }
